# FeatureSelectionGA

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  example.py  example2.py  feature_selection_ga.py  fitness_function.py  requiremenst.txt  requirements.txt  run.py  setup.cfg  survival_fitness.py
.github/: ISSUE_TEMPLATE.md  dependabot.yml  labels.toml  release-drafter.yml
.github/workflows/: changelog-generator.yml  docs.yml  draft-release.yml  publish-pypi.yml  test.yml
docs/: Makefile  modules.rst  requirements.txt
docs/source/: conf.py  index.md  installation.md  usage.md
feature_selection_ga/: __init__.py  feature_selection_ga.py  fitness_function.py
tests/: test_feature_selection_ga.py
