[bumpversion]
current_version = 0.1.2
commit = True
tag = True

[metadata]
name = feature-selection-ga
version = attr: feature_selection_ga.__version__
author = Kaushal Shetty
author_email = kaushalshetty@outlook.com
description = Feature Selection using Genetic Algorithm (DEAP Framework)
license = MIT
license_file = LICENSE
long_description = file:README.md
long_description_content_type = text/markdown
url = https://feature-selection-ga.readthedocs.io
project_urls = 
	Source = https://github.com/kaushalshetty/FeatureSelectionGA
	Documentation = https://featureselectionga.readthedocs.io
	Changelog = https://featureselectionga.readthedocs.io/en/latest/changelog.html
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires = 
	numpy<2
	sklearn<1
	deap<2
test_require = 
	pytest>=5

[options.packages.find]
include = 
	feature_selection_ga
	feature_selection_ga.*

[bumpversion:file:feature_selection_ga/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 88

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
addopts = -v -Wdefault --cov=feature_selection_ga
testpaths = tests/

[tool:isort]
profile = black
known_first_party = tests,feature_selection_ga

